examples/errors/to_less_arguments.jj
func f
with x, y, z


func main
{
    f(1, 2);
}